[metadata]
name = networking_plumgrid
summary = PLUMgrid Open Networking Suite drivers for Neutron
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_plumgrid

[entry_points]
neutronclient.extension=
    pg_exemplar = networking_plumgrid.neutronclient.neutron.v2_0.pg_exemplar.pg_exemplar

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_plumgrid/locale
domain = networking_plumgrid

[update_catalog]
domain = networking_plumgrid
output_dir = networking_plumgrid/locale
input_file = networking_plumgrid/locale/networking_plumgrid.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_plumgrid/locale/networking_plumgrid.pot
